[project]
name = "colawater-toolbox"
version = "3.4.0"
authors = [{ name = "felix", email = "sfx86@users.noreply.github.com" }]
description = "colawater-toolbox is a collection of tools designed specifically to automate difficult or common tasks involved in water-related GIS."
readme = "README.md"
requires-python = ">=3.9"

[tool.mypy]
python_version = 3.9
files = "./src"
strict = true
enable_error_code = "ignore-without-code"

[[tool.mypy.overrides]]
module = "arcpy.*"
ignore_missing_imports = true
