[project]
name = "colawater-toolbox"
version = "3.6.0"
authors = [{ name = "felix", email = "sfx86@users.noreply.github.com" }]
description = "ArcGIS geoprocessing tools for Columbia Water"
readme = "README.md"
requires-python = ">=3.9"

[tool.mypy]
python_version = 3.9
files = "./src"
strict = true
enable_error_code = "ignore-without-code"

[[tool.mypy.overrides]]
module = "arcpy.*"
ignore_missing_imports = true
